[gd_scene load_steps=32 format=3 uid="uid://dl8ycx77sa8oq"]

[ext_resource type="Theme" uid="uid://c6108lc3jg2cv" path="res://assets/ui/GeneralTheme.tres" id="1_0bakg"]
[ext_resource type="Script" path="res://game/level/Level.gd" id="2_5r7gi"]
[ext_resource type="PackedScene" uid="uid://co5dajioxg1kf" path="res://game/mobile/MobileBGHelp.tscn" id="2_vch05"]
[ext_resource type="Theme" uid="uid://cjvm0hkahhs31" path="res://assets/ui/MobileTheme.tres" id="3_uwkov"]
[ext_resource type="PackedScene" uid="uid://c71gf2qx41ep" path="res://game/settings/SettingsScreenMobile.tscn" id="4_dk1gs"]
[ext_resource type="PackedScene" uid="uid://qm8ijblbhiyt" path="res://game/level/GridView.tscn" id="4_lwsqm"]
[ext_resource type="Texture2D" uid="uid://4o1s8byoivu8" path="res://assets/images/ui/objects/timer_icon.png" id="5_dv3ih"]
[ext_resource type="FontFile" uid="uid://vgpg1gbatn5o" path="res://assets/fonts/Bold.otf" id="6_gng55"]
[ext_resource type="PackedScene" uid="uid://bsgjxsq2lu5y2" path="res://game/level/Counter.tscn" id="7_7ge7w"]
[ext_resource type="PackedScene" uid="uid://07qsytklbnnd" path="res://game/level/hints/AquariumHintContainer.tscn" id="8_iaefn"]
[ext_resource type="PackedScene" uid="uid://plt8snslppc5" path="res://game/level/BrushPicker.tscn" id="9_bwhp3"]
[ext_resource type="Texture2D" uid="uid://blssr82fp4wuy" path="res://assets/images/ui/icons/restart_normal.png" id="10_bdk8m"]
[ext_resource type="Texture2D" uid="uid://bmhmlq4xn2rpv" path="res://assets/images/ui/icons/restart_pressed.png" id="11_qqfwp"]
[ext_resource type="Texture2D" uid="uid://sckvadw2hv2e" path="res://assets/images/ui/icons/restart_hover.png" id="12_po5ls"]
[ext_resource type="Texture2D" uid="uid://4x2d32qjcwi1" path="res://assets/images/ui/tutorial/info.png" id="14_hwkp3"]
[ext_resource type="PackedScene" uid="uid://cqxcsefprpluj" path="res://game/level/TutorialDisplay.tscn" id="17_46m0x"]
[ext_resource type="Shader" path="res://assets/shaders/WaterWaves.gdshader" id="18_4jcdt"]
[ext_resource type="PackedScene" uid="uid://bu7mp6nx8xfdw" path="res://game/ui/WaveEffect.tscn" id="18_ioxu2"]
[ext_resource type="Script" path="res://game/ads/BottomAdShower.gd" id="20_ff4mn"]
[ext_resource type="PackedScene" uid="uid://cvc05fffw42ma" path="res://game/steam/SteamPlaytimeTracker.tscn" id="20_o7ta7"]

[sub_resource type="FontVariation" id="FontVariation_hmnss"]
base_font = ExtResource("6_gng55")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxt4x"]
bg_color = Color(0.0156863, 0.105882, 0.219608, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 3.0
expand_margin_right = 3.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_3453y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c876g"]
bg_color = Color(0.670588, 1, 0.819608, 0.784314)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0, 0.0352941, 0.141176, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="Animation" id="Animation_72efb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%ContinueButton/..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%ContinueButton/..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%ContinueButton/..:offset_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-50.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%ContinueButton/..:offset_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_aqku1"]
resource_name = "show"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%BrushPicker:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0163535, 0, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%ContinueButton/..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0221253, 0, 0.0192394),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%ContinueButton/..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.439171),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%ContinueButton/..:offset_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [200.0, -50.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%ContinueButton/..:offset_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [200.0, -50.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dnqfm"]
_data = {
"RESET": SubResource("Animation_72efb"),
"show": SubResource("Animation_aqku1")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mldsp"]
shader = ExtResource("18_4jcdt")
shader_parameter/strength = 0.055
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/radius = 0.0
shader_parameter/aberration = 0.046
shader_parameter/width = 0.0463
shader_parameter/feather = 0.326

[sub_resource type="Animation" id="Animation_1qr1w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HintsContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopInfo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Description:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Title/TitleBanner:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4ayxj"]
resource_name = "startup"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HintsContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopInfo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Description:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.8, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Title/TitleBanner:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 1.3, 3.2, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8al2"]
_data = {
"RESET": SubResource("Animation_1qr1w"),
"startup": SubResource("Animation_4ayxj")
}

[node name="Level" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
theme = ExtResource("3_uwkov")
script = ExtResource("2_5r7gi")

[node name="MobileBGHelp" parent="." instance=ExtResource("2_vch05")]
layout_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 251.0
offset_right = 720.0
offset_bottom = 957.0

[node name="GridView" parent="CenterContainer" instance=ExtResource("4_lwsqm")]
unique_name_in_owner = true
layout_mode = 2

[node name="TopButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 42.0
offset_right = 555.0
offset_bottom = 142.0
theme_override_constants/separation = 36

[node name="BackButton" type="Button" parent="TopButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("3_uwkov")
text = "BACK"

[node name="Spacer" type="Control" parent="TopButtons"]
layout_mode = 2

[node name="TutorialButton" type="Button" parent="TopButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/icon_normal_color = Color(0.85098, 1, 0.886275, 1)
icon = ExtResource("14_hwkp3")
icon_alignment = 1
expand_icon = true

[node name="Spacer2" type="Control" parent="TopButtons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ResetButton" type="TextureButton" parent="TopButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("10_bdk8m")
texture_pressed = ExtResource("11_qqfwp")
texture_hover = ExtResource("12_po5ls")
ignore_texture_size = true
stretch_mode = 6

[node name="TopInfo" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_top = 8.0
offset_bottom = 8.0

[node name="LevelNameContainer" type="HBoxContainer" parent="TopInfo"]
visible = false
layout_mode = 0
offset_left = -90.0
offset_right = 797.0
offset_bottom = 115.0
theme_override_constants/separation = 36

[node name="SectionNumber" type="Label" parent="TopInfo/LevelNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 36
theme_override_font_sizes/font_size = 70
text = "0 - 0"

[node name="LevelLabel" type="Label" parent="TopInfo/LevelNameContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(720, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 54
theme_override_font_sizes/font_size = 90
text = "LEVELNAM"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TopInfo"]
custom_minimum_size = Vector2(0, 69)
layout_mode = 0
offset_top = 146.0
offset_right = 720.0
offset_bottom = 227.0
theme_override_constants/separation = 30
alignment = 1

[node name="TimerContainer" type="HBoxContainer" parent="TopInfo/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="TimerIcon" type="TextureRect" parent="TopInfo/HBoxContainer/TimerContainer"]
modulate = Color(0.85098, 1, 0.886275, 1)
custom_minimum_size = Vector2(69.12, 54.72)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_dv3ih")
expand_mode = 1

[node name="TimerLabel" type="Label" parent="TopInfo/HBoxContainer/TimerContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85098, 1, 0.886275, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 36
theme_override_fonts/font = SubResource("FontVariation_hmnss")
theme_override_font_sizes/font_size = 40
text = "00:00"
vertical_alignment = 2

[node name="VSeparator" type="VSeparator" parent="TopInfo/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/separator = SubResource("StyleBoxFlat_vxt4x")

[node name="MistakeCounter" parent="TopInfo/HBoxContainer" instance=ExtResource("7_7ge7w")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
check_for_satisfied = false

[node name="HBoxContainer" parent="TopInfo/HBoxContainer/MistakeCounter" index="0"]
custom_minimum_size = Vector2(0, 0)
theme_override_constants/separation = 40

[node name="VisibilityButton" parent="TopInfo/HBoxContainer/MistakeCounter/HBoxContainer" index="0"]
visible = false

[node name="Label" parent="TopInfo/HBoxContainer/MistakeCounter/HBoxContainer" index="1"]
custom_minimum_size = Vector2(0, 0)
theme_override_colors/font_color = Color(0.85098, 1, 0.886275, 1)
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 40
autowrap_mode = 0

[node name="Counter" parent="TopInfo/HBoxContainer/MistakeCounter/HBoxContainer" index="2"]
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 40
horizontal_alignment = 0

[node name="HintsContainer" type="VBoxContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 2929.0
offset_top = 512.0
offset_right = 3628.0
offset_bottom = 1772.0
theme_override_constants/separation = 60
alignment = 1

[node name="CountersPanel" type="PanelContainer" parent="HintsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_0bakg")

[node name="MarginContainer" type="MarginContainer" parent="HintsContainer/CountersPanel"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="Counters" type="VBoxContainer" parent="HintsContainer/CountersPanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="WaterCounter" parent="HintsContainer/CountersPanel/MarginContainer/Counters" instance=ExtResource("7_7ge7w")]
unique_name_in_owner = true
layout_mode = 2
counter_name = "WATERS_COUNTER"

[node name="BoatCounter" parent="HintsContainer/CountersPanel/MarginContainer/Counters" instance=ExtResource("7_7ge7w")]
unique_name_in_owner = true
layout_mode = 2
counter_name = "BOATS_COUNTER"

[node name="AquariumHintContainer" parent="HintsContainer" instance=ExtResource("8_iaefn")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="BrushPicker" parent="." instance=ExtResource("9_bwhp3")]
unique_name_in_owner = true
layout_mode = 0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2

[node name="CenterContainer" parent="BrushPicker" index="0"]
offset_top = 1090.0
offset_right = 720.0
offset_bottom = 1280.0

[node name="PanelContainer" parent="BrushPicker/CenterContainer" index="0"]
theme = ExtResource("3_uwkov")

[node name="Water" parent="BrushPicker/CenterContainer/PanelContainer/Images" index="0"]
custom_minimum_size = Vector2(100, 100)

[node name="NoWater" parent="BrushPicker/CenterContainer/PanelContainer/Images" index="1"]
custom_minimum_size = Vector2(100, 100)

[node name="Boat" parent="BrushPicker/CenterContainer/PanelContainer/Images" index="2"]
custom_minimum_size = Vector2(100, 100)

[node name="NoBoat" parent="BrushPicker/CenterContainer/PanelContainer/Images" index="3"]
custom_minimum_size = Vector2(100, 100)

[node name="Wall" parent="BrushPicker/CenterContainer/PanelContainer/Images" index="4"]
custom_minimum_size = Vector2(100, 100)

[node name="Block" parent="BrushPicker/CenterContainer/PanelContainer/Images" index="5"]
custom_minimum_size = Vector2(100, 100)

[node name="Water" parent="BrushPicker/CenterContainer/PanelContainer/Buttons" index="0"]
custom_minimum_size = Vector2(100, 100)

[node name="NoWater" parent="BrushPicker/CenterContainer/PanelContainer/Buttons" index="1"]
custom_minimum_size = Vector2(100, 100)

[node name="Boat" parent="BrushPicker/CenterContainer/PanelContainer/Buttons" index="2"]
custom_minimum_size = Vector2(100, 100)

[node name="NoBoat" parent="BrushPicker/CenterContainer/PanelContainer/Buttons" index="3"]
custom_minimum_size = Vector2(100, 100)

[node name="Wall" parent="BrushPicker/CenterContainer/PanelContainer/Buttons" index="4"]
custom_minimum_size = Vector2(100, 100)

[node name="Block" parent="BrushPicker/CenterContainer/PanelContainer/Buttons" index="5"]
custom_minimum_size = Vector2(100, 100)

[node name="Description" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = 979.0
offset_right = 720.0
offset_bottom = 1079.0
mouse_filter = 2

[node name="Scroll" type="ScrollContainer" parent="Description"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
mouse_filter = 2
follow_focus = true
horizontal_scroll_mode = 3

[node name="Label" type="Label" parent="Description/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 24
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Title" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleBanner" type="PanelContainer" parent="Title"]
modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_3453y")
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = 1935.0
offset_right = 3760.0
offset_bottom = 2113.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c876g")

[node name="Label" type="Label" parent="Title/TitleBanner"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0.0352941, 0.141176, 0.32549)
theme_override_colors/font_outline_color = Color(0.0156863, 0.105882, 0.219608, 1)
theme_override_constants/shadow_offset_x = 20
theme_override_constants/outline_size = 60
theme_override_constants/shadow_outline_size = 60
theme_override_font_sizes/font_size = 120
text = "Level title"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Edit" type="LineEdit" parent="Title"]
visible = false
layout_mode = 0
offset_left = 74.0
offset_top = 512.0
offset_right = 953.0
offset_bottom = 644.0
placeholder_text = "LEVEL_TITLE_PLACEHOLDER"
max_length = 64
caret_blink = true

[node name="TutorialDisplayContainer" type="CenterContainer" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
mouse_filter = 2

[node name="TutorialDisplayBG" type="ColorRect" parent="TutorialDisplayContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(3840, 2160)
layout_mode = 2
color = Color(0, 0.0352941, 0.141176, 0.886275)

[node name="TutorialDisplay" parent="TutorialDisplayContainer" instance=ExtResource("17_46m0x")]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2

[node name="ContinueContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -70.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 50

[node name="ShareButton" type="Button" parent="ContinueContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 0
text = "SHARE"

[node name="ContinueButton" type="Button" parent="ContinueContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "CONTINUE"

[node name="ContinueAnim" type="AnimationPlayer" parent="ContinueContainer"]
unique_name_in_owner = true
root_node = NodePath("../ContinueButton")
libraries = {
"": SubResource("AnimationLibrary_dnqfm")
}

[node name="WaveLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="WaveEffect" parent="WaveLayer" instance=ExtResource("18_ioxu2")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_mldsp")
custom_minimum_size = Vector2(0, 0)
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 720.0
offset_bottom = 1280.0
grow_horizontal = 1
grow_vertical = 1

[node name="SettingsScreen" parent="." instance=ExtResource("4_dk1gs")]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b8al2")
}

[node name="Autosaver" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="SteamPlaytimeTracker" parent="." instance=ExtResource("20_o7ta7")]

[node name="BottomAdShower" type="Node" parent="."]
script = ExtResource("20_ff4mn")

[connection signal="mouse_entered" from="CenterContainer" to="." method="_on_center_container_mouse_entered"]
[connection signal="mistake_made" from="CenterContainer/GridView" to="TopInfo/HBoxContainer/MistakeCounter" method="add_count"]
[connection signal="updated" from="CenterContainer/GridView" to="." method="_on_grid_updated"]
[connection signal="updated_size" from="CenterContainer/GridView" to="." method="_on_grid_view_updated_size"]
[connection signal="mouse_entered" from="TopButtons/BackButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TopButtons/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="TopButtons/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="mouse_entered" from="TopButtons/ResetButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TopButtons/ResetButton" to="." method="reset_level"]
[connection signal="brushed_picked" from="BrushPicker" to="." method="_on_brush_picker_brushed_picked"]
[connection signal="text_changed" from="Title/Edit" to="." method="_on_edit_text_changed"]
[connection signal="mouse_entered" from="ContinueContainer/ContinueButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ContinueContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pause_toggled" from="SettingsScreen" to="." method="_on_settings_screen_pause_toggled"]
[connection signal="timeout" from="Autosaver" to="." method="_on_autosaver_timeout"]

[editable path="TopInfo/HBoxContainer/MistakeCounter"]
[editable path="TopInfo/HBoxContainer/MistakeCounter/HBoxContainer/VisibilityButton"]
[editable path="BrushPicker"]
